--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -5,9 +5,16 @@
     align-items: center;
 }
 
+@mixin dropdown-hover {
+    left: -10px;
+    opacity: 1;
+    transform: translateY(0%);
+    transition: opacity 0.6s 0.3s;
+}
+
 $heavy-grey: #1f1f1f;
 $light-grey: #555454;
-$transition: all 0.4s;
+$transition: all 0.3s;
 
 .logo {
     height: 150px;
@@ -36,43 +43,43 @@ $transition: all 0.4s;
 }
 
 .navItems {
-    height: 30px;
     position: relative;
     min-width: 500px;
+    min-height: 30px;
     display: flex;
     justify-content: space-between;
 }
 
 .navItem {
-    flex-basis: auto;
     background-color: #fff;
+    flex-basis: auto;
     list-style: none;
     font-size: 1.2em;
 
     a {
         text-decoration: none;
-        transition: $transition;
         color: $heavy-grey;
     }
 
     & a:hover {
         color: $light-grey;
+        border-bottom: 1px solid $light-grey;
     }
 
-    &:hover ~ .dropDown {
-        top: 100%;
-        opacity: 1;
-        transition: opacity 0.6s 0.3s;
+    &:hover + .dropDown {
+        @include dropdown-hover;
     }
 }
 
 .dropDown {
+    margin-top: 30px;
     border: $light-grey 1px solid;
-    background-color: #fff;
+    background-color: rgba(226, 225, 225, 0.541);
     padding: 8px;
     position: absolute;
-    z-index: -20;
-    top: 999999px;
+    top: 0;
+    left: -10px;
+    transform: translateY(-1000%);
     min-width: 500px;
     opacity: 0;
 
@@ -83,16 +90,42 @@ $transition: all 0.4s;
 
         a {
             text-decoration: none;
-            transition: $transition;
             color: $heavy-grey;
         }
 
         & a:hover {
             color: $light-grey;
+            border-bottom: 1px solid $light-grey;
         }
     }
     &:hover {
-        opacity: 1;
-        top: 100%;
+        @include dropdown-hover;
     }
+}
+
+.sideDrawer {
+    position: fixed;
+    width: 280px;
+    max-width: 70%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgb(204, 203, 203);
+    padding: 32px 16px;
+    box-sizing: border-box;
+    transition: transform 0.3s ease-out;
+}
+
+@media (min-width: 500px) {
+    .sideDrawer {
+        display: none;
+    }
+}
+
+.open {
+    transform: translateX(0);
+}
+
+.close {
+    transform: translateX(-100%);
 }
