--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,5 +1,3 @@
-@import '~bootstrap/scss/bootstrap';
-
 @mixin flex-vertical {
     display: flex;
     flex-direction: column;
@@ -10,11 +8,12 @@
 @mixin dropdown-hover {
     opacity: 1;
     transform: translateY(0%);
-    transition: 0.2s 0.2s;
+    transition: 0.2s 0.4s;
 }
 
 $heavy-grey: #1f1f1f;
 $light-grey: #555454;
+$yellow: #ccc012;
 
 .logo {
     background-color: #fff;
@@ -64,7 +63,7 @@ $light-grey: #555454;
 
     &:hover a {
         color: $light-grey;
-        border-bottom: 1px solid $light-grey;
+        border-bottom: 2px solid $yellow;
     }
 
     &:hover + .dropDown {
@@ -76,14 +75,13 @@ $light-grey: #555454;
     min-width: 300px;
     height: auto;
     margin-top: 30px;
-    background-color: #fff;
     padding: 8px;
     position: absolute;
     top: 0;
     left: 80px;
     transform: translateY(-1000%);
     opacity: 0;
-    transition: 0.3s 0.4s;
+    transition: 0.3s 0.6s;
     z-index: -1;
 
     .dropDownItem {
@@ -97,8 +95,9 @@ $light-grey: #555454;
         }
 
         &:hover a {
+            font-size: 1.2em;
             color: $light-grey;
-            border-bottom: 1px solid $light-grey;
+            border-bottom: 1px solid $yellow;
         }
     }
     &:hover {
@@ -110,28 +109,56 @@ $light-grey: #555454;
     display: none;
 }
 
+.menuToggle {
+    display: none;
+}
+
 @media (max-width: 500px) {
-    .sideDrawer {
+    .menuToggle {
         display: block;
         position: fixed;
-        width: 280px;
+        top: 10px;
+        left: 10px;
+        font-size: 1.6em;
+        cursor: pointer;
+    }
+
+    .menuClose {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 1.6em;
+        cursor: pointer;
+    }
+
+    .sideDrawer {
+        transform: translateX(-100%);
+        display: block;
+        position: fixed;
+        width: 400px;
         max-width: 70%;
         height: 100%;
         left: 0;
         top: 0;
-        background-color: rgba(197, 198, 199, 0.411);
+        background-color: rgb(255, 255, 255);
         padding: 32px 16px;
         box-sizing: border-box;
-        z-index: 1;
-        transition: transform 0.3s ease-out;
+        z-index: 8;
+        transition: transform 0.4s cubic-bezier(0.9, 0.1, 0.94, -0.07) 0.2s;
     }
 
     .navBar {
-        display: none;
+        height: 50px;
+
+        & .navItems,
+        & .logo,
+        & .login {
+            display: none;
+        }
     }
 
     .logo-Side-Drawer {
-        z-index: 2;
+        z-index: 9;
         text-align: left;
         font: {
             size: 1.5em;
@@ -140,7 +167,7 @@ $light-grey: #555454;
     }
 
     .navItems-Side-Drawer {
-        z-index: 2;
+        z-index: 9;
         width: 100px;
         display: flex;
         flex-direction: column;
@@ -168,24 +195,28 @@ $light-grey: #555454;
     .dropDown {
         min-width: 200px;
         margin: 0 auto;
-
         background-color: transparent;
         position: relative;
         text-align: left;
         left: -10px;
         display: none;
-        z-index: 1;
+        z-index: 10;
 
         &:hover {
             display: block;
         }
     }
-}
+    .sideDrawer.active {
+        transform: translateX(0);
+    }
 
-.open {
-    transform: translateX(0);
-}
-
-.close {
-    transform: translateX(-100%);
+    .backdrop {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        z-index: 3;
+        left: 0;
+        right: 0;
+        background-color: rgba(0, 0, 0, 0.137);
+    }
 }
