--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -1,41 +1,7 @@
-@import 'mixin';
+@import 'mixins';
 
 .slider {
     @include position(relative, 0, 0, none);
-    width: 40%;
-    height: 500px;
+    margin: 30px 50px;
     overflow: hidden;
-    @include keyframes(slide);
-
-    & .slide {
-        @include position(absolute, 0, 0, none);
-        width: 100%;
-        height: 100%;
-        background: #000;
-        visibility: hidden;
-        opacity: 0;
-        animation: slide 20s linear infinite;
-
-        & img {
-            @include position(absolute, 0, 0, none);
-            width: 100%;
-            object-fit: cover;
-        }
-
-        &:nth-child(1) {
-            animation-delay: 0s;
-        }
-
-        &:nth-child(2) {
-            animation-delay: 4s;
-        }
-
-        &:nth-child(3) {
-            animation-delay: 8s;
-        }
-
-        &:nth-child(4) {
-            animation-delay: 12s;
-        }
-    }
 }
