--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;700;800&display=swap');
+@import '~bootstrap/scss/bootstrap';
 
 body {
+    text-align: center;
     margin: 0;
     font-family: 'Raleway', sans-serif;
     -webkit-font-smoothing: antialiased;
