--- a/src/styles/merchandise.scss
+++ b/src/styles/merchandise.scss
@@ -3,26 +3,49 @@
 .MerchandiseCarousel {
     max-width: 1200px;
     height: auto;
-    margin: 50px auto;
-}
+    margin: 50px auto 20px;
 
-.MerchandiseItem {
-    margin: 10px;
-    object-fit: cover;
-    img {
-        height: 250px;
+    h2 {
+        height: 100px;
+        line-height: 100px;
+        font-weight: weight(bold);
+    }
+
+    .slick-slider {
+        max-width: 100%;
+        height: 400px;
+
+        .slick-next::before {
+            content: '❯';
+            color: color(heavy-grey);
+        }
+        .slick-prev::before {
+            content: '❮';
+            color: color(heavy-grey);
+        }
+        .slick-list {
+            max-width: 100%;
+            height: 100%;
+
+            .MerchandiseItem {
+                margin: 0 auto;
+                width: 280px;
+                height: 400px;
+                border: 1px solid color(light-grey);
+                box-sizing: border-box;
+
+                padding: 10px;
+                img {
+                    object-fit: cover;
+                    width: 100%;
+                    height: 75%;
+                }
+
+                .details {
+                    text-align: left;
+                    height: 25%;
+                }
+            }
+        }
     }
 }
-
-// .prev {
-//     position: absolute;
-//     top: 40%;
-//     right: -3%;
-//     display: block;
-
-//     svg {
-//         cursor: pointer;
-//         height: 25px;
-//         width: 25px;
-//     }
-// }
