--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,11 +1,12 @@
 $color: (
+    white: #fff,
+    black: black,
     heavy-grey: #2a2c30,
     light-grey: #5b5e64,
     lighter-grey: rgb(240, 241, 241),
+    fade-white: rgba(255, 255, 255, 0.85),
     transparent-grey: #2a2c305d,
     yellow: #ccc012,
-    white: #fff,
-    fade-white: rgba(255, 255, 255, 0.85),
 );
 
 @function color($color-name) {
