--- a/src/styles/merchandise.scss
+++ b/src/styles/merchandise.scss
@@ -2,7 +2,7 @@
 
 .MerchandiseContainer {
     width: 100vw;
-    height: 520px;
+    height: 450px;
     margin: 50px auto 20px;
     background-color: color(lighter-grey);
 
@@ -16,11 +16,10 @@
 .MerchandiseCarousel {
     max-width: 1200px;
     margin: 0 auto;
-    height: auto;
+    height: 320px;
 
     .slick-slider {
         max-width: 100%;
-        height: 400px;
 
         .slick-next::before {
             content: '❯';
@@ -31,26 +30,40 @@
             color: color(heavy-grey);
         }
         .slick-list {
-            max-width: 100%;
-            height: 100%;
+            height: 320px;
 
             .MerchandiseItem {
                 margin: 0 auto;
                 width: 280px;
-                height: 400px;
-                border: 1px solid color(light-grey);
+                height: 300px;
                 box-sizing: border-box;
+                transition: 0.5s ease-out;
+                cursor: pointer;
 
-                padding: 10px;
-                img {
-                    object-fit: cover;
+                &:hover {
+                    box-shadow: 1px 1px 4px color(transparent-grey);
+                }
+
+                .imgContainer {
                     width: 100%;
-                    height: 75%;
+                    height: 65%;
+                    overflow: hidden;
+
+                    img {
+                        width: 100%;
+                        height: auto;
+                        object-fit: contain;
+                        transition: 0.5s ease-out;
+
+                        &:hover {
+                            transform: scale(1.1, 1.1);
+                        }
+                    }
                 }
 
                 .details {
-                    text-align: left;
-                    height: 25%;
+                    margin-top: 10px;
+                    height: 35%;
                 }
             }
         }
