--- a/src/scss/navigation.scss
+++ b/src/scss/navigation.scss
@@ -4,20 +4,18 @@
 .navBar {
     @include display-flex(column, center, center);
     @include position(sticky, 0, 0);
+    @include WL(none, 100vw, 130px);
     padding-bottom: 20px;
     background-color: color(white);
-    width: 100vw;
-    height: 130px;
-    z-index: z-index(d);
+    z-index: z(d);
 
     .logo {
+        @include WL(none, 100%, 100%);
         background-color: color(white);
-        height: 100%;
-        width: 100%;
         line-height: 100px;
         margin: 0 auto;
         font: {
-            size: size(2xl);
+            size: size(l);
             weight: weight(bold);
         }
     }
@@ -29,29 +27,25 @@
             size: size(xs);
             weight: weight(normal);
         }
-
         width: auto;
     }
 
     .navItems {
         @include display-flex(row, space-between, none);
+        @include WL(min, 500px, 30px);
         box-sizing: border-box;
-        min-width: 500px;
-        height: 30px;
     }
 }
 
 .navItem {
+    @include A(light-grey, heavy-grey, yellow);
     flex-basis: auto;
     list-style: none;
+    background-color: color(white);
     font: {
-        size: size(m);
+        size: size(s);
         weight: weight(bold);
     }
-
-    background-color: color(white);
-
-    @include A(black, light-grey, yellow);
 
     &:hover + .dropDown {
         @include dropdown-hover;
@@ -59,23 +53,23 @@
 }
 
 .dropDown {
-    @include position(absolute, 200px, -20, 0);
+    @include position(absolute, 200px, -10, 0);
+    @include WL(min, 100vw);
     background-color: color(fade-white);
-    min-width: 100vw;
     margin-top: 30px;
     padding: 8px;
     transform: translateY(-500px);
     opacity: 0;
     transition: 0.4s 0.4s;
-    z-index: z-index(b);
+    z-index: z(b);
 
     .dropDownItem {
+        @include A(heavy-grey, light-grey, yellow);
         list-style: none;
         padding: 8px;
         font-size: size(xs);
-
-        @include A(heavy-grey, light-grey, yellow);
     }
+
     &:hover {
         @include dropdown-hover;
     }
@@ -112,18 +106,17 @@
 
     .sideDrawer {
         @include position(fixed, 0, 0, none);
+        @include WL(min, 70%, 100%);
         transform: translateX(-100%);
         display: block;
-        min-width: 70%;
-        height: 100%;
         background-color: color(white);
         padding: 32px 16px;
         box-sizing: border-box;
-        z-index: z-index(h);
+        z-index: z(h);
         transition: transform 0.4s cubic-bezier(0.9, 0.1, 0.94, -0.07) 0.2s;
 
         .logo-Side-Drawer {
-            z-index: z-index(i);
+            z-index: z(i);
             text-align: left;
             font: {
                 size: size(l);
@@ -133,7 +126,7 @@
 
         .navItems-Side-Drawer {
             @include display-flex(column, center, flex-start);
-            z-index: z-index(i);
+            z-index: z(i);
             width: 100px;
             margin-top: 20px;
 
@@ -163,7 +156,7 @@
         background-color: transparent;
         text-align: left;
         display: none;
-        z-index: z-index(i);
+        z-index: z(i);
         box-shadow: none;
 
         &:hover {
@@ -177,9 +170,8 @@
 
     .backdrop {
         @include position(fixed);
-        width: 100%;
-        height: 100%;
-        z-index: z-index(e);
+        @include WL(none, 100%, 100%);
+        z-index: z(e);
         transition: 0.4s;
         background-color: color(transparent-grey);
     }
