--- a/src/scss/merchandise.scss
+++ b/src/scss/merchandise.scss
@@ -38,11 +38,12 @@
                 @include WL(none, 280px, 300px);
                 margin: 0 auto;
                 box-sizing: border-box;
+                transform: translateY(0);
                 transition: 0.5s ease-out;
                 cursor: pointer;
 
                 &:hover {
-                    box-shadow: 1px 1px 4px color(transparent-grey);
+                    box-shadow: 0 8px 15px -3px color(transparent-grey);
                 }
 
                 .imgContainer {
@@ -51,7 +52,7 @@
 
                     img {
                         @include WL(none, 100%);
-                        object-fit: contain;
+                        object-fit: cover;
                         transition: 0.5s ease-out;
 
                         &:hover {
