--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200&display=swap');
 @import '~bootstrap/scss/bootstrap';
 
 body {
     text-align: center;
     margin: 0;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Kanit', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
