--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600&display=swap');
 @import '~bootstrap/scss/bootstrap';
+@import 'variables';
 
 body {
     text-align: center;
     margin: 0;
-    font-family: 'Oxygen', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
