--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600&display=swap');
 @import '~bootstrap/scss/bootstrap';
 @import 'variables';
+@import 'mixins';
 
 body {
     text-align: center;
