--- a/client/src/scss/navigation.scss
+++ b/client/src/scss/navigation.scss
@@ -4,7 +4,7 @@
 .navBar {
     @include display-flex(column, center, center);
     @include position(sticky, 0, 0);
-    @include WL(none, 100vw, 130px);
+    @include WL(none, 100vw, 20vh);
     padding-bottom: 20px;
     background-color: color(white);
     z-index: z(d);
