--- a/client/src/scss/merchandise.scss
+++ b/client/src/scss/merchandise.scss
@@ -19,6 +19,17 @@
     @include WL(none, 90vw, 320px);
     margin: 0 auto;
 
+    a {
+        text-decoration: none;
+        color: color(heavy-grey);
+        transition: 0.6s ease;
+    }
+
+    a:hover {
+        text-decoration: none;
+        color: color(light-grey);
+    }
+
     .slick-slider {
         max-width: 100%;
 
