--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap');
 @import '~bootstrap/scss/bootstrap';
 @import 'variables';
 @import 'mixins';
@@ -6,7 +6,7 @@
 body {
     text-align: center;
     margin: 0;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
